# python-template

./: .coveragerc  .gitignore  pyproject.toml
.github/workflows/: ci.yml  coverage.yml
src/lepackage/: __init__.py  calculations.py
tests/: test_calculations.py
