[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Jolo- <lockomoto@googlemail.com>"]
readme = "README.md"
packages = [
    {include = "lepackage", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
